--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuetify": "^2.4.3"
+    "vuetify": "^2.4.3",
+    "vuetify-loader": "^1.7.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
