--- a/package.json
+++ b/package.json
@@ -1,67 +1,67 @@
 {
-  "name": "rookiewiki2-fe",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "markdown-it": "^12.0.4",
-    "markdown-it-abbr": "^1.0.4",
-    "markdown-it-container": "^3.0.0",
-    "markdown-it-deflist": "^2.1.0",
-    "markdown-it-footnote": "^3.0.2",
-    "markdown-it-highlightjs": "^3.4.0",
-    "markdown-it-ins": "^3.0.1",
-    "markdown-it-katex": "^2.0.3",
-    "markdown-it-mark": "^3.0.1",
-    "markdown-it-sub": "^1.0.0",
-    "markdown-it-sup": "^1.0.0",
-    "markdown-it-task-lists": "^2.1.1",
-    "markdown-it-toc": "^1.1.0",
-    "mavon-editor-x": "^1.0.1",
-    "md5": "^2.3.0",
-    "nprogress": "^0.2.0",
-    "vue": "^2.6.11",
-    "vue-jsdiff": "https://github.com/YouXam/vue-jsdiff.git",
-    "vue-router": "^3.2.0",
-    "vuetify": "^2.4.3",
-    "vuetify-loader": "^1.7.2"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/eslint-config-standard": "^5.1.2",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
+    "name": "rookiewiki2-fe",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build",
+        "lint": "vue-cli-service lint"
     },
-    "extends": [
-      "plugin:vue/essential",
-      "@vue/standard"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
+    "dependencies": {
+        "markdown-it": "^12.0.4",
+        "markdown-it-abbr": "^1.0.4",
+        "markdown-it-container": "^3.0.0",
+        "markdown-it-deflist": "^2.1.0",
+        "markdown-it-footnote": "^3.0.2",
+        "markdown-it-highlightjs": "^3.4.0",
+        "markdown-it-ins": "^3.0.1",
+        "markdown-it-katex": "git+https://github.com/418sec/markdown-it-katex.git",
+        "markdown-it-mark": "^3.0.1",
+        "markdown-it-sub": "^1.0.0",
+        "markdown-it-sup": "^1.0.0",
+        "markdown-it-task-lists": "^2.1.1",
+        "markdown-it-toc": "^1.1.0",
+        "mavon-editor-x": "^1.0.2",
+        "md5": "^2.3.0",
+        "nprogress": "^0.2.0",
+        "vue": "^2.6.11",
+        "vue-jsdiff": "^1.0.1",
+        "vue-router": "^3.2.0",
+        "vuetify": "^2.4.3",
+        "vuetify-loader": "^1.7.2"
     },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+    "devDependencies": {
+        "@vue/cli-plugin-babel": "~4.5.0",
+        "@vue/cli-plugin-eslint": "~4.5.0",
+        "@vue/cli-plugin-router": "~4.5.0",
+        "@vue/cli-service": "~4.5.0",
+        "@vue/eslint-config-standard": "^5.1.2",
+        "babel-eslint": "^10.1.0",
+        "eslint": "^6.7.2",
+        "eslint-plugin-import": "^2.20.2",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^4.2.1",
+        "eslint-plugin-standard": "^4.0.0",
+        "eslint-plugin-vue": "^6.2.2",
+        "vue-template-compiler": "^2.6.11"
+    },
+    "eslintConfig": {
+        "root": true,
+        "env": {
+            "node": true
+        },
+        "extends": [
+            "plugin:vue/essential",
+            "@vue/standard"
+        ],
+        "parserOptions": {
+            "parser": "babel-eslint"
+        },
+        "rules": {}
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions",
+        "not dead"
+    ]
 }
