--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
+        "@youxam/markdown-it-katex-x": "^1.0.0",
         "markdown-it": "^12.0.4",
         "markdown-it-abbr": "^1.0.4",
         "markdown-it-container": "^3.0.0",
@@ -15,7 +16,6 @@
         "markdown-it-footnote": "^3.0.2",
         "markdown-it-highlightjs": "^3.4.0",
         "markdown-it-ins": "^3.0.1",
-        "markdown-it-katex": "git+https://github.com/418sec/markdown-it-katex.git",
         "markdown-it-mark": "^3.0.1",
         "markdown-it-sub": "^1.0.0",
         "markdown-it-sup": "^1.0.0",
